--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -128,17 +128,9 @@ li {
             margin: 0 1.6rem;
         }
 
-        &-01 {
+        img {
             align-items: center;
             display: flex;
-
-            @include pc {
-                max-width: 16.6rem;
-                margin: 0 1.6rem;
-            }
-        }
-        &-02 {
-            padding: 0.3rem 0 0;
 
             @include pc {
                 max-width: 16.6rem;
@@ -223,9 +215,10 @@ li {
 -----------------------------------------*/
 .top {
     &__container {
-        background-image: url("/assets/image/woman_sp.png");
+        background-image: url("/assets/image/top_woman.png");
         text-align: center;
         min-height: 31.8rem;
+        background-color: #fa7da3;
         color: #fff;
         display: flex;
         margin-top: 6.3rem;
@@ -270,7 +263,7 @@ li {
     &__left--title {
         text-align: center;
         padding: 0.8rem 1.8rem 0 1.6rem;
-
+        margin: 0 0 1.15rem 0;
 
         @include pc {
             padding-top: 21rem;
@@ -287,27 +280,6 @@ li {
             }
         }
     }
-    h1 {
-        font-size: 4.2rem;
-        margin: 0 0 1.15rem 0;
-
-        @include pc {
-            font-size: 5rem;
-            line-height: calc(68 / 50);
-            margin: 0 0 1rem 0;
-            letter-spacing: 1.48rem;
-        }
-    }
-    h2 {
-        font-size: 1.8rem;
-        line-height: 1.23;
-
-        @include pc {
-            font-size: 5rem;
-            line-height: calc(68 / 50);
-            letter-spacing: 1.48rem;
-        }
-    }
     &__right {
         display: flex;
         flex-direction: column;
@@ -316,18 +288,9 @@ li {
         display: flex;
         width: 18.8rem;
         height: 10.7rem;
-        filter: drop-shadow(0.35rem 0.35rem 0 rgba(0,0,0,0.25));
+        box-shadow: 0.3rem 0.3rem 0 rgba(0, 0, 0, 0.25);
         background-color: rgba(255,255,255,0.3);
         position: relative;
-
-        &::after {
-            content: "";
-            position: absolute;
-            width: 100%;
-            box-shadow: 0.35rem 0.35rem 0 rgba(0,0,0,0.2);
-            background-color: rgba(255,255,255,0.3);
-            height: 10.5rem;
-        }
     }
     &__right--item {
         display: flex;
@@ -439,6 +402,7 @@ li {
     .give__item {
         text-align: center;
         margin: 0 auto;
+        max-width: 35rem;
 
         &--title {
             border-radius: 1rem 1rem 0 0;
@@ -466,6 +430,8 @@ li {
     p {
         font-size: 1rem;
         color: #333;
+        padding: 1rem 0 0 0;
+        text-align: center;
     }
 }
 
